fixed overflow and resize

--- a/style.css
+++ b/style.css
@@ -7,37 +7,27 @@
     overflow: hidden;
 }
 
-.container {
+:root {
+    font-size: calc(1rem - 2px);
+}
+
+body {
     height: 100vh;
     display: grid;
     place-items: center;
     font-family: "Kumbh Sans", sans-serif;
-    background: hsl(185, 75%, 39%);
-}
-
-.top {
-    position: absolute;
-    top: 0;
-    left: 0;
-    transform: translate(-50%, -50%);
-    z-index: 1;
-}
-
-.bottom {
-    position: absolute;
-    z-index: 1;
-    right: 0;
-    bottom: 0;
-    transform: translate(50%, 50%);
+    background: url(./images/bg-pattern-top.svg) left -45vw top -50vw no-repeat,
+        url(./images/bg-pattern-bottom.svg) right -20vw bottom -35vw no-repeat, hsl(185, 75%, 39%);
+    background-size: 95vw, 70vw;
 }
 
 .profile {
     width: 25rem;
     background: white;
     border-radius: 10px;
-    overflow: hidden;
     position: relative;
     z-index: 2;
+    box-shadow: 50px 50px 70px rgba(0, 0, 0, 0.1);
 }
 
 .profile__images {
@@ -99,8 +89,12 @@ hr {
     letter-spacing: 0.1em;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 600px) {
     .profile {
-        width: 22rem;
+        width: 95%;
+    }
+    body {
+        background-position: left -85vw top -50vw, right -70vw bottom -50vw;
+        background-size: 150vw, 130vw;
     }
 }
